make mdeximage comp

--- a/src/content/blog/handling-asyc-data.mdx
+++ b/src/content/blog/handling-asyc-data.mdx
@@ -2,21 +2,21 @@
 title: Handling Asynchronous Data Fetching in React Beyond the Basics
 description: Handling asynchronous data fetching in React
 date: 2024-07-07
-tags: ['react js', 'react-query']
+tags: ["react js", "react-query"]
 published: true
 ---
 
 If you've ever fetched data in a React app, you've likely encountered a basic pattern like this:
 
 ```js
-const [id, setId] = useState(1)
+const [id, setId] = useState(1);
 
 useEffect(() => {
   fetch(`https://pokeapi.co/api/v2/pok/${id}`)
-    .then(response => response.json())
-    .then(data => setPokemon(data))
-    .catch(error => setError(error))
-}, [id])
+    .then((response) => response.json())
+    .then((data) => setPokemon(data))
+    .catch((error) => setError(error));
+}, [id]);
 ```
 
 This code fetches data from the PokeAPI and displays it.
@@ -30,24 +30,24 @@ leading to two major UX issues: cumulative layout shift and an infinite spinner.
 To address this, you should manage these states explicitly:
 
 ```js /floatingStyles/
-const [id, setId] = useState(1)
-const [pokemon, setPokemon] = useState(null)
-const [loading, setLoading] = useState(false)
-const [error, setError] = useState(null)
+const [id, setId] = useState(1);
+const [pokemon, setPokemon] = useState(null);
+const [loading, setLoading] = useState(false);
+const [error, setError] = useState(null);
 
 useEffect(() => {
-  setLoading(true)
+  setLoading(true);
   fetch(`https://pokeapi.co/api/v2/pok/${id}`)
-    .then(response => response.json())
-    .then(data => {
-      setPokemon(data)
-      setLoading(false)
+    .then((response) => response.json())
+    .then((data) => {
+      setPokemon(data);
+      setLoading(false);
     })
-    .catch(error => {
-      setError(error)
-      setLoading(false)
-    })
-}, [id])
+    .catch((error) => {
+      setError(error);
+      setLoading(false);
+    });
+}, [id]);
 ```
 
 This approach ensures you can display appropriate feedback to the user while data is being fetched.
@@ -56,10 +56,10 @@ This approach ensures you can display appropriate feedback to the user while dat
 
 A more subtle issue arises with multiple asynchronous requests.
 Let's take an example where you have Pokémon data to display.
-You have a button that, when clicked, changes the ID of the Pokemon.
+You have a button that, when clicked, changes the ID of the Pokemon
 
 <figure>
-  <img src="/static/race_cond1.png" alt="race condition 1" />
+  <Image src="/static/race_cond1.png" alt="race condition 1" />
   <figcaption>
     Here, the `id` state is set to 1 when you click the button.
   </figcaption>
@@ -68,7 +68,7 @@ You still haven't received the data from the first request, but you click the bu
 again, changing the id to 2.
 
 <figure>
-  <img src="/static/race_cond2.png" alt="race condition 2" />
+  <Image src="/static/race_cond2.png" alt="race condition 2" />
   <figcaption>
     Here, the `id` state is set to 2 when you click the button.
   </figcaption>
@@ -78,11 +78,11 @@ for ID 1 returns second. Your state with the pokemonId will be out of sync with 
 fetch call if the fetch for ID 1 returns after the fetch for ID 2 due to happenstance.
 
 <figure>
-  <img src="/static/race_cond3.png" alt="race condition 3" />
+  <Image src="/static/race_cond3.png" alt="race condition 3" />
   <figcaption>The data for ID 2 returns first.</figcaption>
 </figure>
 <figure>
-  <img src="/static/race_cond4.png" alt="race condition 4" />
+  <Image src="/static/race_cond4.png" alt="race condition 4" />
   <figcaption>The data for ID 1 returns second.</figcaption>
 </figure>
 This race condition can cause the UI to display incorrect data, as the state
@@ -93,28 +93,28 @@ you could end up with race conditions this is how you can fix that:
 
 ```js /floatingStyles/
 useEffect(() => {
-  let isMounted = true
+  let isMounted = true;
 
-  setLoading(true)
+  setLoading(true);
   fetch(`https://pokeapi.co/api/v2/pok/${id}`)
-    .then(response => response.json())
-    .then(data => {
+    .then((response) => response.json())
+    .then((data) => {
       if (isMounted) {
-        setPokemon(data)
+        setPokemon(data);
       }
-      setLoading(false)
+      setLoading(false);
     })
-    .catch(error => {
+    .catch((error) => {
       if (isMounted) {
-        setError(error)
+        setError(error);
       }
-      setLoading(false)
-    })
+      setLoading(false);
+    });
 
   return () => {
-    isMounted = false
-  }
-}, [id])
+    isMounted = false;
+  };
+}, [id]);
 ```
 
 By using a isMounted flag, you can ignore responses from outdated requests.
@@ -124,38 +124,38 @@ By using a isMounted flag, you can ignore responses from outdated requests.
 To avoid duplicating the fetching logic, you can abstract it into a custom hook:
 
 ```js showLineNumbers {2-4}
-const usePokemon = id => {
-  const [id, setId] = useState(1)
-  const [pokemon, setPokemon] = useState(null)
-  const [loading, setLoading] = useState(false)
-  const [error, setError] = useState(null)
+const usePokemon = (id) => {
+  const [id, setId] = useState(1);
+  const [pokemon, setPokemon] = useState(null);
+  const [loading, setLoading] = useState(false);
+  const [error, setError] = useState(null);
 
   useEffect(() => {
-    let isMounted = true
+    let isMounted = true;
 
-    setLoading(true)
+    setLoading(true);
     fetch(`https://pokeapi.co/api/v2/pok/${id}`)
-      .then(response => response.json())
-      .then(data => {
+      .then((response) => response.json())
+      .then((data) => {
         if (isMounted) {
-          setPokemon(data)
+          setPokemon(data);
         }
-        setLoading(false)
+        setLoading(false);
       })
-      .catch(error => {
+      .catch((error) => {
         if (isMounted) {
-          setError(error)
+          setError(error);
         }
-        setLoading(false)
-      })
+        setLoading(false);
+      });
 
     return () => {
-      isMounted = false
-    }
-  }, [id])
+      isMounted = false;
+    };
+  }, [id]);
 
-  return { pokemon, loading, error }
-}
+  return { pokemon, loading, error };
+};
 ```
 
 This hook encapsulates the data fetching logic, making it reusable across different components.
@@ -167,35 +167,35 @@ One major drawback of using local component state is data duplication. If multip
 To mitigate this, you can lift the state up to a common parent component or use context:
 
 ```js showLineNumber
-const PokemonContext = createContext()
+const PokemonContext = createContext();
 
 const PokemonProvider = ({ url, children }) => {
-  const [data, setData] = useState({})
-  const [loading, setLoading] = useState(false)
-  const [error, setError] = useState(null)
+  const [data, setData] = useState({});
+  const [loading, setLoading] = useState(false);
+  const [error, setError] = useState(null);
 
   useEffect(() => {
-    let isMounted = true
-    setLoading(true)
+    let isMounted = true;
+    setLoading(true);
     fetch(url)
-      .then(response => response.json())
-      .then(data => {
+      .then((response) => response.json())
+      .then((data) => {
         if (isMounted) {
-          setPokemon(data)
+          setPokemon(data);
         }
-        setLoading(false)
+        setLoading(false);
       })
-      .catch(error => {
+      .catch((error) => {
         if (isMounted) {
-          setError(error)
+          setError(error);
         }
-        setLoading(false)
-      })
+        setLoading(false);
+      });
 
     return () => {
-      isMounted = false
-    }
-  }, [id])
+      isMounted = false;
+    };
+  }, [id]);
 
   return (
     <PokemonContext.Provider
@@ -208,8 +208,8 @@ const PokemonProvider = ({ url, children }) => {
     >
       {children}
     </PokemonContext.Provider>
-  )
-}
+  );
+};
 ```
 
 ## **5. Leveraging React Query**
@@ -217,17 +217,17 @@ const PokemonProvider = ({ url, children }) => {
 To simplify data fetching and state management, consider using React Query. It handles caching, synchronization, and updating state efficiently:
 
 ```js showLineNumbers {10}
-import { useQuery } from 'react-query'
+import { useQuery } from "react-query";
 
-const fetchPokemon = async id => {
-  const res = await fetch(`https://pokeapi.co/api/v2/pok/${id}`)
-  if (!res.ok) throw new Error('Network response was not ok')
-  return res.json()
-}
+const fetchPokemon = async (id) => {
+  const res = await fetch(`https://pokeapi.co/api/v2/pok/${id}`);
+  if (!res.ok) throw new Error("Network response was not ok");
+  return res.json();
+};
 
-const usePokemon = id => {
-  return useQuery(['pokemon', id], () => fetchPokemon(id))
-}
+const usePokemon = (id) => {
+  return useQuery(["pokemon", id], () => fetchPokemon(id));
+};
 ```
 
 React Query abstracts away much of the complexity involved in handling asynchronous data and state, allowing you to focus on building features.
