--- a/src/content/blog/handling-asyc-data.mdx
+++ b/src/content/blog/handling-asyc-data.mdx
@@ -19,9 +19,9 @@ useEffect(() => {
 }, [id]);
 ```
 
-This code fetches data from the PokeAPI and displays it.
+This code fetches data from the PokemonAPI and displays it.
 While it's great for tutorials, you definitely wouldn’t want to use it in production unless you enjoy debugging at 3 AM.
-Let’s dive into some common pitfalls and how to avoid them like a pro Pokemon trainer dodging Zubats in a cave!
+Let’s dive into some common pitfalls and how to avoid them.
 
 ## **1. Handling Loading and Error States**
 
@@ -73,9 +73,8 @@ again, changing the `id` to 2.
     Here, the `id` state is set to 2 when you click the button.
   </figcaption>
 </figure>
-There is a possibility that the second request with ID 2 returns first, and the data
-for ID 1 returns second. Your state with the pokemonId will be out of sync with the
-fetch call if the fetch for ID 1 returns after the fetch for ID 2 due to happenstance.
+Your state with the pokemonId will be out of sync with the fetch call if the fetch
+for ID 1 returns after the fetch for ID 2 due to happenstance.
 
 <figure>
   <Image src="/blog/race_cond3.png" alt="race condition 3" />
@@ -121,7 +120,8 @@ By using a isMounted flag, you can ignore responses from outdated requests.
 
 ## **3. Abstracting Data Fetching Logic**
 
-To avoid duplicating the fetching logic, you can abstract it into a custom hook:
+If you try to push that code to production, someone will definitely ask, 'Can you just hook it up as a custom hook?' 🪝
+and you'll finish with code like this:
 
 ```js showLineNumbers {2-4}
 const usePokemon = (id) => {
@@ -162,62 +162,78 @@ This hook encapsulates the data fetching logic, making it reusable across differ
 
 ## **4. Managing Data Duplication and State**
 
-One major drawback of using local component state is data duplication. If multiple components fetch the same data, it leads to redundant requests and potential inconsistencies.
+Okay, after addressing all the previous issues,
+you might realize that another component also needs access to the same endpoint data.
+It wouldn't make sense to send another request to the backend just to get the same results.
+Remember, one of your key responsibilities as a software developer is to
+reduce unnecessary costs and inefficiencies in your code.
 
-To mitigate this, you can lift the state up to a common parent component or use context:
+When multiple components fetch the same data, it not only creates redundant requests but can also lead to inconsistencies.
+To prevent this, you should create a context to share the data across multiple components. Alternatively,
+you could lift the state up to a common parent component or use context to efficiently manage and distribute the data.
 
 ```js showLineNumber
-const PokemonContext = createContext();
+import * as React from "react";
 
-const PokemonProvider = ({ url, children }) => {
-  const [pokemon, setPokemon] = useState(null);
-  const [loading, setLoading] = useState(false);
-  const [error, setError] = useState(null);
+const queryContext = React.createContext([{}, () => {}]);
 
-  useEffect(() => {
-    let isMounted = true;
-    setLoading(true);
-    fetch(url)
-      .then((response) => response.json())
-      .then((data) => {
-        if (isMounted) {
-          setPokemon(data);
-        }
-        setLoading(false);
-      })
-      .catch((error) => {
-        if (isMounted) {
-          setError(error);
-        }
-        setLoading(false);
-      });
-
-    return () => {
-      isMounted = false;
-    };
-  }, [id]);
+export function QueryProvider({ children }) {
+  const tuple = React.useState({});
 
   return (
-    <PokemonContext.Provider
-      value={{
-        data,
-        loading,
-        error,
-        fetchPokemon,
-      }}
-    >
-      {children}
-    </PokemonContext.Provider>
+    <queryContext.Provider value={tuple}>{children}</queryContext.Provider>
   );
-};
+}
+
+export default function useQuery(url) {
+  const [state, setState] = React.useContext(queryContext);
+
+  React.useEffect(() => {
+    const update = (newState) =>
+      setState((prevState) => ({
+        ...prevState,
+        [url]: { ...prevState[url], ...newState },
+      }));
+    let ignore = false;
+
+    const handleFetch = async () => {
+      update({ data: null, isLoading: true, error: null });
+
+      try {
+        const response = await fetch(url);
+
+        if (ignore) {
+          return;
+        }
+        if (res.ok === false) {
+          throw new Error("Network response was not ok");
+        }
+
+        const data = await response.json();
+
+        update({ data, isLoading: false, error: null });
+      } catch (error) {
+        update({ data: null, isLoading: false, error });
+      }
+    };
+  }, [url]);
+
+  return state[url] || { data: null, isLoading: true, error: null };
+}
 ```
+
+Are you still considering handling asynchronous data by yourself?
+I don't think so. Before trying to solve a problem by myself,
+I always check if others have already solved it for us,
+and in most cases, they have. That's where React Query comes in.
 
 ## **5. Leveraging React Query**
 
-To simplify data fetching and state management, consider using React Query. It handles caching, synchronization, and updating state efficiently:
+To simplify data fetching and state management, consider using React Query. It efficiently handles caching,
+synchronization, and state updates. Look at how easy it is to fetch data without worrying about all the previous issues.
 
 ```js showLineNumbers {10}
-import { useQuery } from "react-query";
+import { useQuery } from "@tanstack/react-query";
 
 const fetchPokemon = async (id) => {
   const res = await fetch(`https://pokeapi.co/api/v2/pokemon/${id}`);
@@ -225,9 +241,21 @@ const fetchPokemon = async (id) => {
   return res.json();
 };
 
-const usePokemon = (id) => {
-  return useQuery(["pokemon", id], () => fetchPokemon(id));
+const Pokemon = () => {
+  const [id, setId] = useState(1);
+
+  const { data, isLoading, error } = useQuery({
+    queryKey: ["pokemon", id],
+    queryFn: () => fetchPokemon(id),
+  });
+
+  if (isLoading) return "Loading...";
+  if (error) return "An error has occurred: " + error.message;
+
+  return <div>....</div>;
 };
+
+export default Pokemon;
 ```
 
 React Query abstracts away much of the complexity involved in handling asynchronous data and state, allowing you to focus on building features.
