--- a/src/content/blog/handling-asyc-data.mdx
+++ b/src/content/blog/handling-asyc-data.mdx
@@ -87,7 +87,7 @@ useEffect(() => {
 }, [id]);
 ```
 
-I've written a full blog explaining race conditions, and I highly recommend checking it out: [Race Condition](http://localhost:3000/blog/race-condition-react).
+I've written a full blog explaining race conditions, and I highly recommend checking it out:<Link target="\_blank" href={"/blog/race-condition-react"}> Race Condition</Link>.
 
 ## **3. Abstracting Data Fetching Logic**
 
